Intergalactic 2: Change element which is used to prevent side scroll on wide blocks; original element also caused header to be cut off. Fixes #318.

--- a/intergalactic-2/blocks.css
+++ b/intergalactic-2/blocks.css
@@ -20,7 +20,7 @@ Description: Used to style Gutenberg Blocks.
 
 /* Alignments */
 
-.site-content {
+.singular .entry-content-wrapper {
 	overflow-x: hidden;
 }
 
